// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterAccount component should match snapshot when errors exist 1`] = `
<form
  noValidate={true}
  onSubmit={[MockFunction]}
>
  <div
    className="registerAccount"
  >
    <label
      className="registerAccountLabels"
    >
      Imię:
      <input
        id="firstName"
        onChange={[MockFunction]}
        type="text"
      />
      <ErrorText
        error={1}
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Nazwisko:
      <input
        id="lastName"
        onChange={[MockFunction]}
        type="text"
      />
      <ErrorText
        error={1}
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Data urodzenia:
      <input
        id="date"
        max="2004-12-31"
        min="1900-01-01"
        onChange={[MockFunction]}
        onKeyPress={[MockFunction]}
        type="date"
      />
      <ErrorText
        error={1}
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      e-mail:
      <input
        id="mail"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        type="email"
      />
      <ErrorText
        error={1}
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Hasło:
      <input
        id="originalPassword"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        type="password"
      />
      <ErrorText
        error={1}
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Powtórz hasło:
      <input
        id="repeatedPassword"
        onChange={[MockFunction]}
        type="password"
      />
      <ErrorText
        error={1}
      />
    </label>
    <div
      className="createAccountButtonDiv"
    >
      <button
        className="createAccountButton"
        disabled={true}
        onClick={[MockFunction]}
        type="button"
      >
        Stwórz konto
      </button>
    </div>
  </div>
</form>
`;

exports[`RegisterAccount component should match snapshot when no errors 1`] = `
<form
  noValidate={true}
  onSubmit={[MockFunction]}
>
  <div
    className="registerAccount"
  >
    <label
      className="registerAccountLabels"
    >
      Imię:
      <input
        id="firstName"
        onChange={[MockFunction]}
        type="text"
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Nazwisko:
      <input
        id="lastName"
        onChange={[MockFunction]}
        type="text"
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Data urodzenia:
      <input
        id="date"
        max="2004-12-31"
        min="1900-01-01"
        onChange={[MockFunction]}
        onKeyPress={[MockFunction]}
        type="date"
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      e-mail:
      <input
        id="mail"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        type="email"
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Hasło:
      <input
        id="originalPassword"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        type="password"
      />
    </label>
    <label
      className="registerAccountLabels"
    >
      Powtórz hasło:
      <input
        id="repeatedPassword"
        onChange={[MockFunction]}
        type="password"
      />
    </label>
    <div
      className="createAccountButtonDiv"
    >
      <button
        className="createAccountButton"
        disabled={true}
        onClick={[MockFunction]}
        type="button"
      >
        Stwórz konto
      </button>
    </div>
  </div>
</form>
`;
